tests/fail/struct-field-assign-type.virtue
struct hello
    a i64
h = new hello
h.a = "what"

# error: type error
#  --> test.virtue:4:7
#    |
#  4 | h.a = "what"
#    |       ^^^^^^ expected i64, found string
#
